Fix bug where the overlay was covering the text elements

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,6 +21,7 @@
     }
 
     .content {
+        position: relative;
         z-index: 10;
     }
 }
